maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: identifier expected but 'new' found.
  var BiscuitCoord : new Array;
                     ^